welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:8: error: '(' expected but identifier found.
      if isFacingTrail()
         ^SlugHunting:20: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:32: error: Unmatched closing brace '}' ignored here
}
^